--- a/notebooks/text_db_creation.ipynb
+++ b/notebooks/text_db_creation.ipynb
@@ -2133,14 +2133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "77b40e89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5366a6e57394fa3adba9f66d5efeefe",
+       "model_id": "36bd8d7679824117af81c30cda2cb0f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2176,10 +2176,13 @@
     "     'Followup Instructions', '$']\n",
     "\n",
     "# df_i50 = pd.read_csv('../data/icd/i50.csv')\n",
-    "df_e11 = pd.read_csv('../data/icd/e11.csv')\n",
+    "# df_e11 = pd.read_csv('../data/icd/e11.csv')\n",
+    "# df_e78 = pd.read_csv('../data/icd/e78.csv')\n",
+    "# df_n17 = pd.read_csv('../data/icd/n17.csv')\n",
+    "df_z85 = pd.read_csv('../data/icd/z85.csv')\n",
     "for chunk in tqdm(pd.read_csv('../data/text/discharge.csv', chunksize = 10000)):\n",
     "    \n",
-    "    dis = chunk.merge(df_e11, how='inner', on=['subject_id', 'hadm_id']) #to get the rows that match our observations\n",
+    "    dis = chunk.merge(df_z85, how='inner', on=['subject_id', 'hadm_id']) #to get the rows that match our observations\n",
     "    \n",
     "    \n",
     "    \n",
@@ -2245,7 +2248,11 @@
     "        # filter it to the subjectId and hadm_id\n",
     "    df.append(df_text)\n",
     "df_icd = pd.concat(df)\n",
-    "df_icd.to_csv('../data/text_ice11.csv') #add .csv\n",
+    "# df_icd.to_csv('../data/text_ice11.csv')\n",
+    "# df_icd.to_csv('../data/text_ici50.csv')\n",
+    "# df_icd.to_csv('../data/text_ice78.csv')\n",
+    "# df_icd.to_csv('../data/text_icn17.csv')\n",
+    "df_icd.to_csv('../data/text_icz85.csv')#add .csv\n",
     "#     df_text.to_sql('text', db, if_exists = 'append', index = False)            # Append the chunk to a referral table\n",
     "\n",
     "    "
@@ -2254,7 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "caaba583",
+   "id": "4bf9760b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2264,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d004e618",
+   "id": "d7542707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2274,7 +2281,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6aa04afa",
+   "id": "476a0381",
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2303,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f2f3af06",
+   "id": "d9dbab93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2313,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b83cb444",
+   "id": "1bddbc09",
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1436f9e6",
+   "id": "5239dcaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2352,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d070deb3",
+   "id": "f37121a2",
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "73c05327",
+   "id": "61516b43",
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e2c93d30",
+   "id": "84a28517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4918f310",
+   "id": "96255308",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3105,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "97b164d2",
+   "id": "e18f6cb9",
    "metadata": {},
    "outputs": [
     {
