ictarget added in db

--- a/notebooks/text_db_creation.ipynb
+++ b/notebooks/text_db_creation.ipynb
@@ -98,6 +98,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23d64c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6526691f",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "db0a4f08",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1386,7 @@
        "[('patients',), ('admission',), ('diagicd',), ('text',), ('text_ic50',)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1456,7 @@
    "source": [
     "# query = \"\"\"\n",
     "# SELECT * \n",
-    "# FROM text \n",
+    "# FROM text ```````````\n",
     "# WHERE subject_id = '10000980'\n",
     "# \"\"\"\n",
     "query = \"\"\"\n",
@@ -1999,21 +2007,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "2a2ef1f0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#As the database crashed in the middle of adding IC50 rows we wanted to delete and restore the table \n",
     "#so that when adding baack there is no duplication of rows.\n",
@@ -2040,11 +2037,20 @@
     "PRAGMA temp_store_directory;\n",
     "\"\"\"\n",
     "\n",
+    "query6 = \"\"\"\n",
+    "DROP TABLE text_ic50;\n",
+    "\"\"\"\n",
+    "query7 = \"\"\"\n",
+    "DROP TABLE text;\n",
+    "\"\"\"\n",
+    "\n",
     "with sqlite3.connect('../data/ehr.sqlite') as db: \n",
+    "#     db.execute(query6)\n",
+    "    db.execute(query7)\n",
     "#    page_count = db.execute(query4)\n",
-    "    directory = db.execute(query5)\n",
+    "#     directory = db.execute(query5)\n",
     "# page_count.fetchall()\n",
-    "directory.fetchall()\n",
+    "# directory.fetchall()\n",
     "\n",
     "\n",
     "#1073741823 max_count, page#we have (1046870,)"
@@ -2052,83 +2058,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1e5c629d",
+   "execution_count": 48,
+   "id": "22761a77",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>hadm_id</th>\n",
-       "      <th>icd</th>\n",
-       "      <th>long_title</th>\n",
-       "      <th>chief_complaint</th>\n",
-       "      <th>surgical_invasive_procedure</th>\n",
-       "      <th>history_present_illness</th>\n",
-       "      <th>past_medcal_history</th>\n",
-       "      <th>social_history</th>\n",
-       "      <th>family_history</th>\n",
-       "      <th>...</th>\n",
-       "      <th>discharge</th>\n",
-       "      <th>pertinent_results</th>\n",
-       "      <th>hospital_course</th>\n",
-       "      <th>medication_on_admission</th>\n",
-       "      <th>medication_on_discharge</th>\n",
-       "      <th>discharge_disposition</th>\n",
-       "      <th>discharge_diagnosis</th>\n",
-       "      <th>discharge_condition</th>\n",
-       "      <th>discharge_instruction</th>\n",
-       "      <th>followup_instruction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 21 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [subject_id, hadm_id, icd, long_title, chief_complaint, surgical_invasive_procedure, history_present_illness, past_medcal_history, social_history, family_history, physical_exam, discharge, pertinent_results, hospital_course, medication_on_admission, medication_on_discharge, discharge_disposition, discharge_diagnosis, discharge_condition, discharge_instruction, followup_instruction]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 21 columns]"
+       "[('patients',), ('admission',), ('diagicd',), ('ictarget',)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"\"\"\n",
-    "SELECT * \n",
-    "FROM text \n",
-    "WHERE icd = 'I50'\n",
-    "\"\"\"\n",
+    "#checking the tables in the sqlite_db\n",
     "\n",
-    "with sqlite3.connect('../data/ehr.sqlite') as db: \n",
-    "    text_sqlite = pd.read_sql(query, db)\n",
-    "text_sqlite"
+    "db = sqlite3.connect('../data/ehr.sqlite')\n",
+    "db.execute(\"\"\"SELECT \n",
+    "    name\n",
+    "FROM \n",
+    "    sqlite_schema\n",
+    "WHERE \n",
+    "    type ='table' AND \n",
+    "    name NOT LIKE 'sqlite_%';\"\"\").fetchall()"
    ]
   },
   {
@@ -2270,7 +2225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c0a8621",
+   "id": "8109631d",
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2773,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c30d70e",
+   "id": "87a56012",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3047,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "13415f85",
+   "id": "c0ba39a7",
    "metadata": {},
    "outputs": [
     {
@@ -3647,7 +3602,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8ef1cf9d",
+   "id": "bbb064b5",
    "metadata": {},
    "outputs": [
     {
@@ -3921,7 +3876,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c4880ea6",
+   "id": "1fb9081e",
    "metadata": {},
    "outputs": [
     {
@@ -4202,7 +4157,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "32ab910b",
+   "id": "2757b2ef",
    "metadata": {},
    "outputs": [
     {
@@ -4476,7 +4431,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e86b4ecc",
+   "id": "55edd565",
    "metadata": {},
    "outputs": [
     {
@@ -4801,7 +4756,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "52bd7b9f",
+   "id": "1dbe5c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4811,7 +4766,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5dd942c3",
+   "id": "86a9bfd4",
    "metadata": {},
    "outputs": [
     {
@@ -5367,7 +5322,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "98c82a7e",
+   "id": "2f940aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5377,7 +5332,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "746f816d",
+   "id": "8a27ccfc",
    "metadata": {},
    "outputs": [
     {
@@ -5603,7 +5558,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cd7c3393",
+   "id": "bb95a47e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5613,8 +5568,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "99ffb9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ictarget.to_csv('../data/ictarget.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ad632641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "263941"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ictarget = pd.read_csv('../data/ictarget.csv')\n",
+    "\n",
+    "# ictarget.columns = [x.lower().replace(' ', '_') for x in ictarget.columns]\n",
+    "\n",
+    "# db = sqlite3.connect('../data/ehr.sqlite')\n",
+    "\n",
+    "# ictarget.to_sql('ictarget', db, if_exists = 'append', index = False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1e5c629d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Count(*)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>263941</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Count(*)\n",
+       "0    263941"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT Count(*) \n",
+    "FROM ictarget;\n",
+    "\"\"\"\n",
+    "\n",
+    "with sqlite3.connect('../data/ehr.sqlite') as db: \n",
+    "    text_sqlite = pd.read_sql(query, db)\n",
+    "text_sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
-   "id": "706d4913",
+   "id": "c906a11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5627,7 +5679,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "313a3293",
+   "id": "db765a8e",
    "metadata": {},
    "outputs": [],
    "source": [
