start_model_prediction

--- a/notebooks/text_db_creation.ipynb
+++ b/notebooks/text_db_creation.ipynb
@@ -1376,17 +1376,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "db0a4f08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('patients',), ('admission',), ('diagicd',), ('text',), ('text_ic50',)]"
+       "[('patients',), ('admission',), ('diagicd',), ('ictarget',)]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
